# personal-site

./: .babelrc  .eslintrc  .eslintrc.js  .gitignore  CNAME  Cargo.toml  LICENSE  README.md  alex_strand_resume.tex  anon_resume.tex  api.test.txt  app.css  app.js  bun.lockb  colors.css  copyFiles.js  criticalCss.js  cv.css  cv.html  data.json  esinstall.js  extract.mjs  fetch-mdx-post-files.js  gatsby-config.js  gatsby-node.js  getCriticalCss.js  graphStuff.txt  header.css  index.css  index.html  index_dev.html  insertDebug.mjs  mainColors.css  mise.toml  my_first_post.html  netlify.toml  package-lock.json  package.json  pageTemplate.jsx  palette.scss  (+24 more)
.ladle/: components.jsx
.netlify/: state.json
__tests__/: first.test.js  first.test.jsx
base/: code-block-styles.css  colors.css  index.css  theme-switch.css
common-js/: rehype-prism-mdx.js  tailwind.config.js
content/: learningRust.mdx  lofi-videos.mdx  using-css-grid.mdx
css/: app.css  cv.css  header.css  post.css  posts.css
customComponents/: Error.client.jsx  GifPlayerWrapper.js  OtherPostsNav.js
footnotes/: package.json  react-footnotes-a11y.es.js  style.css
js/: app.js  define.js  toggleDark.js  type.js
json/: data.json  projectsArray.json
junk/: projects.js
mocks/: handlers.js  mockedGraphql.jsx  server.js
my-blog-starter/: gatsby-config.js  package.json
new-toast-site/: .gitignore  README.md  fetch-mdx-post-files.js  package.json  toast.js
postTemplates/: post.md  secondPost.md
purescript-pasta/: index.html  package.json  spago.yaml  vite.config.js
site/: README.md  gleam.toml  (+11 more)
(+221 files in other folders)
